# NsgOrcFx

./: .gitignore  .pypirc  NsgOrcFx.py  README.md  auxfuncs.py  classes.py  constants.py  environment.py  modal.py  objauxfuncs.py  pyproject.toml  requirements.txt  requirements_old.txt  sncurves.py  sortlines.py  test.py  upload.py  upload_production.py  upload_test.py  utils.py  weight.py  weightaux.py
src/NsgOrcFx/: NsgOrcFx.py  __init__.py  auxfuncs.py  classes.py  constants.py  constraintloads.py  environment.py  fatigue.py  loadcases.py  main.py  multiproc.py  objauxfuncs.py  params.py  raos.py  raos_old.py  sncurves.py  sortlines.py  utils.py  vessel.py  weight.py  weightaux.py
src/NsgOrcFx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NsgOrcFx_nsgeng/: NsgOrcFx.py  auxfuncs.py  classes.py  modal.py
src/NsgOrcFx_nsgeng.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test1_data-auto-complete.py  test2_generate-loadcases.py  test2_searchwave.py  test3_generate-loadcases.py  test4_fatigue.py  test4_modal-analysis.py  test5_fatigue.py  test6_rao-plots.py  test7_constraint-load-results.py  test8_HsTp-wave-selection.py  test8_HsTp-wave-selection_old.py
tests/tmp/: _CaseList.xlsx  fatigue.ftg  fatigue.sim
