[project]
name = "NsgOrcFx"
version = "1.0.15"
authors = [
  { name="NSG Engenharia", email="software@nsgeng.com" },
]
description = "Package with additional tools to the OrcFxAPI package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/NSG-Engenharia/NsgOrcFx"
Issues = "https://github.com/NSG-Engenharia/NsgOrcFx/issues"