[project]
name = "NsgOrcFx"
version = "1.0.25"
authors = [
  { name="NSG Engenharia", email="software@nsgeng.com" },
]
description = "Package with additional tools to the OrcFxAPI package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
  'OrcFxAPI >= 11.4.2',
  'numpy >= 1.26.4',
  'pandas >= 2.2.2',
  'scipy >= 1.13.0',
  'matplotlib >= 3.8.0'
]

[project.urls]
Homepage = "https://github.com/NSG-Engenharia/NsgOrcFx"
Issues = "https://github.com/NSG-Engenharia/NsgOrcFx/issues"